--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@mui/x-data-grid": "^5.17.1",
+    "@mui/x-date-pickers": "^5.0.1",
     "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
